--- a/client/src/components/BWFIlmReelHoriz/film.css
+++ b/client/src/components/BWFIlmReelHoriz/film.css
@@ -134,7 +134,7 @@
 
 .block {
   width: 100%;
-  height: auto;
+  height: 100%;
   box-sizing: border-box;
   position: absolute;
   bottom: 0px;
@@ -150,7 +150,6 @@
   height: 100%;
   position: relative;
   margin: 8px;
-  
 }
 
 .perfs{
