--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,8 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
+
+html, body {
+    overflow-x:hidden;
+    margin: 0;
+}
