--- a/client/src/components/BWFIlmReelHoriz/film.css
+++ b/client/src/components/BWFIlmReelHoriz/film.css
@@ -189,14 +189,39 @@
   position: relative;
   width: 100%;
   height: 100%;
-
 }
 
 .film-burn{
+  display: flex;
+  position: relative;
+  height: 100%;
+  width: 100%;
+  filter: url(#wavy) blur(1px);
+}
+
+svg{
+  display: none;
+}
+
+.film-burn::before{
+  content: "";
   position: absolute;
-  width: 10%;
+  top: 3vmin;
+  left: -57vmin;
+  right: -54vmin;
+  bottom: 46vmin;
+  border: 30vmin solid hsl(0, 0%, 100%);
+  border-radius: 50%;
+  box-shadow: 0 0 5vmin hsl(40, 100%, 99%), inset 0 0 5vmin hsl(0, 0%, 91%);
+}
+
+
+.white-fill{
+  position: absolute;
+  background-color:hsl(0, 0%, 100%) ;
   height: 10%;
-  background-color:white;
+  width: 100%;
+  margin-top: 130px;
 }
 
 body {
