--- a/client/src/components/BWFIlmReelHoriz/film.css
+++ b/client/src/components/BWFIlmReelHoriz/film.css
@@ -198,9 +198,15 @@ svg{
 .film-burn{
   display: flex;
   position: relative;
-  height: 100%;
+  height:7vmin;
   width: 100%;
   filter: url(#wavy) blur(1px);
+}
+
+.burn-container{
+  height: 100%;
+  width:100%;
+  position: relative;
 }
 
 .film-burn::after{
@@ -211,14 +217,34 @@ svg{
   bottom: 46vmin;
   border: 30vmin solid hsl(0, 0%, 100%);
   box-shadow: 0 0 5vmin hsl(40, 100%, 99%), inset 0 0 5vmin hsl(0, 0%, 91%);
-  filter: url(#wavy) blur(1px);
+  /* filter: url(#wavy) blur(1px); */
   position: absolute;
+  animation: slideinbottom 2.5s ease-in-out;
 }
 
-.burn-container{
-  position:static;
+.animate-burn{
+  animation: slideinbottom 2.5s ease-in-out;
+}
+
+.off-screen{
+  background-color: rgb(9,9,8);
+  /* top: 600px; */
+  height: 800px;
+}
+
+@keyframes slideinbottom {
+  0% {
+    top: 500px;
+  }
+  100% {
+    top: 12vmin;
+  }
+}
+
+.inner-burn{
   height: 100%;
   width: 100%;
+  position:absolute;
 }
 
 .hidden{
