--- a/client/src/components/BWFIlmReelHoriz/film.css
+++ b/client/src/components/BWFIlmReelHoriz/film.css
@@ -177,10 +177,6 @@
   display: flex;
 }
 
-/* body{
-  background-color: rgb(9, 9, 8);
-} */
-
 #messed-up-block{
     height: 24vh;
 }
@@ -219,11 +215,7 @@ svg{
   box-shadow: 0 0 5vmin hsl(40, 100%, 99%), inset 0 0 5vmin hsl(0, 0%, 91%);
   /* filter: url(#wavy) blur(1px); */
   position: absolute;
-  animation: slideinbottom 2.5s ease-in-out;
-}
-
-.animate-burn{
-  animation: slideinbottom 2.5s ease-in-out;
+  animation: slideinbottom 1.5s ;
 }
 
 .off-screen{
