finish UI for nav, need to link pages

--- a/client/src/components/BWFIlmReelHoriz/film.css
+++ b/client/src/components/BWFIlmReelHoriz/film.css
@@ -207,11 +207,11 @@ svg{
 
 .film-burn::after{
   content: "";
-  top: 12vmin;
+  top: 3vh;
   left: -57vmin;
   right: -54vmin;
   bottom: 46vmin;
-  border: 29vmin solid hsl(0, 0%, 100%);
+  border: 12vmin solid hsl(0, 0%, 100%);
   box-shadow: 0 0 5vmin hsl(40, 100%, 99%), inset 0 0 5vmin hsl(0, 0%, 91%);
   /* filter: url(#wavy) blur(1px); */
   position: absolute;
@@ -226,10 +226,10 @@ svg{
 
 @keyframes slideinbottom {
   0% {
-    top: 500px;
+    top: 80vh;
   }
   100% {
-    top: 12vmin;
+    top: 3vh;
   }
 }
 
