--- a/client/src/components/NavBar/Navbar.css
+++ b/client/src/components/NavBar/Navbar.css
@@ -1,16 +1,18 @@
 .active{
-    background-color:white;
-    color:black;
+    background-color:#000;
+    color:#fff;
 }
 
-.nav{
+.nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(9,9,8);
+    background-color: #fff;
     position: sticky;
     top: 0;
-    z-index:9999;
+    z-index: 9999;
+    margin-bottom: 1.8rem;
+    height: 4.5vh;
 }
 
 nav .title{
@@ -18,7 +20,7 @@ nav .title{
     margin: 1rem;
     font-weight: bold;
     text-decoration: none;
-    color: white;
+    color: #000;
 }
 
 nav ul{
@@ -33,7 +35,7 @@ nav ul li{
 nav ul li a{
     display: block;
     text-decoration: none;
-    color: white;
+    color: #000;
     padding: 0.5rem;
     margin: 0 0.5rem;
     border-radius: 0.5rem;
@@ -50,7 +52,7 @@ nav .menu{
     justify-content: space-between;
     width: 2.25rem;
     height: 2rem;
-    color: white;
+    color: #000;
     margin-right: 0.8rem;
 }
 
@@ -61,7 +63,7 @@ nav .x{
     justify-content: space-between;
     width: 2.25rem;
     height: 2rem;
-    color: white;
+    color: #000;
     margin-right: 0.8rem;
 }
 
@@ -88,7 +90,7 @@ nav .side-menu{
 }
 
 .side{
-    background-color: rgb(9,9,8);
+    background-color: #fff;
     width: 75px;
     height: 18vh;
     display:block;
@@ -101,7 +103,7 @@ nav .side-menu{
 }
 
 .side.active{
-    top:5.5vh;
+    top:4.5vh;
     right:0;
     transition: 350ms ease-in-out;
 }
@@ -113,11 +115,31 @@ nav .side-menu{
     justify-content: space-between;
     width: 2.25rem;
     height: 2rem;
-    color: white;
+    color: #000;
     margin-right: 0.8rem;
 }
 
 .orienatation-icon:active{
-    background-color:white;
-    color:black;
+    background-color:#000;
+    color:#fff;
+}
+
+
+.film-burn-nav {
+    position: absolute;
+    height: 0;
+    width: 0;
+    z-index: -999;
+}
+  
+.film-burn-nav::after {
+    content: "";
+    top: -58vmin;
+    left: -20vmin;
+    right: -54vmin;
+    bottom: 110vmin;
+    border: 61vmin solid hsl(0, 0%, 100%);
+    box-shadow: 0 0 3vmin hsl(0, 0%, 100%), inset 0 0 9vmin hsl(0, 0%, 100%);
+    filter: url(#wavy-nav) blur(1px);
+    position: relative;
 }
