--- a/client/src/components/BWFIlmReelHoriz/film.css
+++ b/client/src/components/BWFIlmReelHoriz/film.css
@@ -211,21 +211,21 @@ svg{
   left: -57vmin;
   right: -54vmin;
   bottom: 46vmin;
-  border: 16vmin solid hsl(0, 0%, 100%);
+  border: 10vmin solid hsl(0, 0%, 100%);
   box-shadow: 0 0 5vmin hsl(40, 100%, 99%), inset 0 0 5vmin hsl(0, 0%, 91%);
   /* filter: url(#wavy) blur(1px); */
   position: absolute;
   animation: slideinbottom 1.5s ;
 }
 
-.off-screen{
+/* .off-screen{
   background-color: rgb(9,9,8);
-  height: 800px;
-}
+  height: 10vh;
+} */
 
 @keyframes slideinbottom {
   0% {
-    top: 80vh;
+    top: 14vh;
   }
   100% {
     top: 3vh;
@@ -289,7 +289,13 @@ html {
   align-items: center;
   position: relative;
   z-index: 2;
-  top: 4vh;
+  top: 3vh;
+  opacity:0;
+  transition: opacity 6s ease-in-out; 
+}
+
+.ig-container.show{
+  opacity: 1;
 }
 
 .ig-icon{
@@ -297,12 +303,6 @@ html {
   width: 18vw;
   height: 4vh;
   color: rgb(9,9,8);
-  /* opacity: 0;
-  transition: opacity 2s ease-in-out;  */
-}
-
-.fade-in-element.show {
-  opacity: 1;
 }
 
 .burn-container ul{
