--- a/client/src/components/BWFIlmReelHoriz/film.css
+++ b/client/src/components/BWFIlmReelHoriz/film.css
@@ -185,7 +185,7 @@
   position: relative;
   width: 100%;
   height: 100%;
-  animation: slide-in-from-top 3s ease-in-out;
+  animation: slide-in-from-top 2s cubic-bezier(0.22, 0.61, 0.36, 1);
 }
 
 @keyframes slide-in-from-top {
